--- a/assignment6/css/styles.css
+++ b/assignment6/css/styles.css
@@ -1,3 +1,6 @@
+/* assignment6 */
+
+
 /* universal */
 *{
     margin: 0;
@@ -25,12 +28,15 @@ header .title{
 .menu-container{
     position: relative;
 }
+.outer-box{
+    margin-left:20px;margin-right:20px;
+}
 .menus{
     position: absolute;
-    top: -13px;
+    top: -16px;
     right: 20px;
 }
-.menus span{
+.span-icon{
     display: inline-block;
     width:70px;
     height:70px;
@@ -46,24 +52,22 @@ header .title{
     padding-bottom:50px;
 }
 .menu-items{
-    background-color: #ffffff;
     position:absolute;
-    right:10px;
+    right:35px;
     top:130px;
-    width: 250px;
+    width: 230px;
     height:150px;
+    background-color: #ffffff;
     text-align: justify;
     border: solid;    
     display: none;
     padding:10px 0;
     z-index: 2;
     border-color: #ffffff;
-    /* margin:40px; */
     
 }
 .menu-items div{
     font-size: 16px;
-    /* padding: 7px; */
     margin:15px;
     padding-left: 20px;
     font-weight: 700;
@@ -82,30 +86,36 @@ header .title{
     margin-bottom: 70px;
 }
 .card{
+    position: relative;
     display: inline-block;
     width: 320px;
     margin: 0px 20px 50px;
-    position: relative;
+    
 }
 .image-panel{
-     padding:60px;
+     padding: 70px 40px 0px 40px;
+     height: 300px;
+     width:230px;
      background-color: #24252a;
 }
 .image-block,.image-block img{
     background-color: #24252a;
 }
-img{
+.image-block{
+    width: 180px;
+    margin: auto;
+}
+.title img, .image-block img{
     width: 100%;
-    /* max-width: 100px; */
-    /* height: 200px; */
-    padding-top: 30px;;
+    padding: 10px;
+    margin: auto;
 }
 .image-block img{
     height: 240px;
 }
-.card-name{
+.product-name{
     font-size: 23px;
-    font-weight: 300;
+    font-weight: 400;
     padding-top: 10px;
     color:#ffffff;
 }
@@ -127,13 +137,13 @@ button{
     
 }
 .size{
+    position: absolute;
+    right: 29px;
+    bottom: 90px;
     width:55px;
     height:55px;
     display: inline-block;
     background-color: #87b181;
-    position: absolute;
-    right: 20px;
-    bottom: 90px;
     border-radius: 50%;
     padding: 2px;
     text-align: center; 
@@ -144,26 +154,26 @@ button{
     font-weight: 500;
 }
 .card i{
-    color:#87b181;
     position:absolute;
     top:20px;
-    right:20px;
+    right:27px;
+    color:#87b181;
     font-size: 22px;
 }
 
 /* card styles */
 footer{
-    text-align: center;
-    background-color: #000000;
     position: fixed;
     bottom: 0;
     left: 0;
+    text-align: center;
+    background-color: #000000;
     width: 100%;
 }
 .footer-menus{
- display: inline-block;
- font-size: 25px;
- color: #ffffff;
- padding: 30px;
- font-weight: 700;
+    display: inline-block;
+    font-size: 25px;
+    color: #ffffff;
+    padding: 30px;
+    font-weight: 700;
 }
